--- a/index.html
+++ b/index.html
@@ -5,26 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porsche</title>
-    <style>
-        @font-face {
-            font-family: 'porsche';
-            src: url(fonts/911porscha/911porschav3.ttf) format('truetype');
-        }
-
-        *{
-            margin: 0px;
-            padding: 0px;
-        }
-
-        h1 {
-            font-family: 'porsche';
-            padding: 20px;
-            text-align: center;
-            color: white;
-            background-color: black;
-            font-size: 3em;
-        }
-    </style>
+    <link rel="stylesheet" href="porsche/style.css">
 </head>
 <body>
     <h1>Site sobre a marca Porsche</h1>
