--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porsche</title>
     <link rel="stylesheet" href="porsche/style.css">
+    <style>
+        
+    </style>
 </head>
 <body>
     <h1>Site sobre a marca Porsche</h1>
